# AGSsock

./: CMakeLists.txt  Doxyfile  LICENSE.txt  README.md
.github/workflows/: cmake.yml
res/: agssock.rc  version.h.in
src/: API.cpp  API.h  Buffer.cpp  Buffer.h  Pool.cpp  Pool.h  SockAddr.cpp  SockAddr.h  SockData.cpp  SockData.h  Socket.cpp  Socket.h  agsplugin.cpp  agsplugin.h
test/: Test.cpp  Test.h  buffer.cpp  pool.cpp  sockaddr.cpp  socket.cpp
test/agsmock/: Library.cpp  Library.h  agsmock.cpp  agsmock.h  engine.cpp  engine.h
test/tester/: Test.cpp  Test.h
